# socrates-rs

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  tea.yaml
examples/: Cargo.toml
examples/example-api/: Cargo.toml
examples/example-api/src/: lib.rs
examples/example-consumer/: Cargo.toml
examples/example-consumer/src/: lib.rs
examples/example-provider/: Cargo.toml
examples/example-provider/src/: lib.rs
socrates/: Cargo.toml
socrates-core/: Cargo.toml
socrates-core/src/: lib.rs
socrates-core/src/component/: connectors.rs  definition.rs  factory.rs  mod.rs
socrates-core/src/module/: container.rs  context.rs
socrates-core/src/service/: event.rs  manager.rs  mod.rs  query.rs  reference.rs  service.rs
socrates-launcher/: Cargo.toml
socrates-launcher/src/: main.rs
socrates-macro/: Cargo.toml
socrates-macro/src/: lib.rs
socrates-test/: Cargo.toml
socrates-test/src/: lib.rs
socrates/src/: lib.rs
socrates/src/common/: listener.rs  mod.rs
socrates/src/component/: definition.rs  mod.rs
socrates/src/module/: activator.rs  container.rs  context.rs  dynamod.rs  mod.rs  shared.rs
socrates/src/service/: event.rs  guard.rs  manager.rs  mod.rs  query.rs  reference.rs  registration.rs  registry.rs  service.rs  svc.rs
