[package]
name = "socrates-macro"
version = "0.0.1"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["dynamic", "module", "service", "libloading"]
repository = "https://github.com/magnet/socrates-rs"
description = """
The core traits and types in for the `socrates` library.
"""
categories = ["config"]
edition = "2018"

[dependencies]
synom = "0.11"
syn = {version= "0.15.17", features = ["full"] }
quote = "0.6.9"
socrates = { path = "../socrates", version = "0.0.1" }


[lib]
proc-macro = true