[package]
name = "socrates-test"
version = "0.0.1"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["dynamic", "module", "service", "libloading"]
repository = "https://github.com/magnet/socrates-rs"
description = """
A test crate for Socrates.
"""
categories = ["config"]
edition = "2018"


[dependencies]
socrates = { path = "../socrates", version = "0.0.1" }
query_interface = "0.3.5"
