[package]
name = "socrates"
version = "0.0.1"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["dynamic", "module", "service", "libloading"]
repository = "https://github.com/magnet/socrates-rs"
description = """
A dynamic module system and service framework for Rust.
"""
categories = ["config"]
edition = "2018"

[dependencies]
socrates-core = { path = "../socrates-core", version = "0.0.1" }
