[package]
name = "socrates"
version = "0.0.1"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
keywords = ["dynamic", "module", "service", "libloading"]
repository = "https://github.com/magnet/socrates-rs"
description = """
A dynamic module system and service framework for Rust.
"""
categories = ["config"]
edition = "2018"

[dependencies]
socrates-core = { path = "../socrates-core", version = "0.0.1" }
libloading = "0.5"
query_interface = "0.3.5"
parking_lot = "0.6.4"
hashbrown = "0.1.4"
log = "0.4.6"
