[package]
name = "socrates"
version = "0.0.1"
authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
license = "Apache-2.0"
readme = "../README.md"
keywords = ["dynamic", "module", "service", "libloading"]
repository = "https://github.com/magnet/socrates-rs"
description = """
A dynamic module system and service framework for Rust.
"""
categories = ["config"]
edition = "2018"

[dependencies]
socrates-core = { path = "../socrates-core", version = "0.0.1" }
libloading = "0.5"
query_interface = "0.3.5"
parking_lot = { version = "0.7.0", features = ["nightly", "deadlock_detection"] }
hashbrown = "0.1.6"
log = "0.4.6"
im = "12.2.0"
